[fix] mobile banner overflowing across edges

--- a/css/general.css
+++ b/css/general.css
@@ -242,11 +242,11 @@ color: #ECEBEB;
 }
 
 .intro-header {
-  height: 100%; /* Full PAge */
+  height: 100%; /* Full Page */
   padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
   padding-bottom: 50px;
   color: #f8f8f8;
-  background: url(../img/intro/ai_dd_conference_banner.png) no-repeat center center;
+  background: url(../img/intro/ai_dd_conference_banner_wide.png) no-repeat center center; /* Banner as shown on wide page view*/
   background-size: cover;
   text-align: center;
 }
@@ -314,7 +314,7 @@ color: #ECEBEB;
 .banner {
 	padding: 100px 0;
 	color: #f8f8f8;
-	background: url(../img/intro/ai_dd_conference_banner.png) no-repeat center center;
+	background: url(../img/intro/ai_dd_conference_banner_wide.png) no-repeat center center;
 	background-size: cover;
 }
 
@@ -1065,7 +1065,7 @@ color: #ECEBEB;
 			padding-top: 50px;
 			padding-bottom: 50px;
 			color: #f8f8f8;
-		    background: url(../img/intro/ai_dd_conference_banner.png) no-repeat center center;
+		    background: url(../img/intro/ai_dd_conference_banner_wide.png) no-repeat center center;  /* TODO: Fix for mobile screens*/
 			background-size: cover;
 			text-align: center;
 			background-color: #34495e;
